--- a/allfiles/vlog.html
+++ b/allfiles/vlog.html
@@ -105,9 +105,9 @@
                                 </a>
                             </div>
                             <div class="step_count">
-                                <a href="./index.html" class="active"><span>4</span></a>
-                                <a href="./index.html"><span>5</span></a>
-                                <a href="./index.html"><span>6</span></a>
+                                <a href="./vlog.html" class="active stp-4 cstp_1"><span>4</span></a>
+                                <a href="./vlog.html" class="stp-5 cstp_2"><span>5</span></a>
+                                <a href="./vlog.html" class="stp-6 cstp_3"><span>6</span></a>
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -174,7 +174,7 @@
         <!-- yop-steps ends-->
 
         <!-- step 4 starts -->
-        <div class="step-4-main main-class collapse show" id="stepFour" aria-labelledby="headingFour" data-parent="#main_content">
+        <div class="step-4-main main-class cdata_1 collapse show" id="stepFour" aria-labelledby="headingFour" data-parent="#main_content">
             <div class="container">
                 <div class="step-4-inner row">
                     <div class="step-4-inner-left col-md-6">
@@ -205,12 +205,12 @@
         <!-- step 4 starts -->
 
         <!-- step 5 -->
-        <div class="step-5-main main-class collapse" id="stepFive" aria-labelledby="headingFive" data-parent="#main_content">
+        <div class="step-5-main main-class cdata_2 collapse" id="stepFive" aria-labelledby="headingFive" data-parent="#main_content">
             <div class="container">
                 <div class="step-5-inner">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div class="carousel-item crsel1 active">
                                 <div class="step-5 first-row row">
                                     <div class="first-row-head col-md-12">
                                         <div class="row first-box-row-head">
@@ -363,7 +363,7 @@
                                 <!-- count me in section -->
                             </div>
                             <!--  -->
-                            <div class="carousel-item">
+                            <div class="carousel-item crsel2">
                                 <div class="step-5 first-row row">
                                     <div class="first-row-head col-md-12">
                                         <div class="row first-box-row-head">
@@ -516,7 +516,7 @@
                                 <!-- count me in section -->
                             </div>
                             <!--  -->
-                            <div class="carousel-item">
+                            <div class="carousel-item crsel3">
                                 <div class="step-5 first-row row">
                                     <div class="first-row-head col-md-12">
                                         <div class="row first-box-row-head">
@@ -668,7 +668,7 @@
                                 <!-- count me in section -->
                             </div>
                             <!--  -->
-                            <div class="carousel-item">
+                            <div class="carousel-item crsel4">
                                 <div class="step-5 first-row row">
                                     <div class="first-row-head col-md-12">
                                         <div class="row first-box-row-head">
@@ -821,7 +821,7 @@
                                 <!-- count me in section -->
                             </div>
                             <!--  -->
-                            <div class="carousel-item">
+                            <div class="carousel-item crsel5">
                                 <div class="step-5 first-row row">
                                     <div class="first-row-head col-md-12">
                                         <div class="row first-box-row-head">
@@ -974,7 +974,7 @@
                                 <!-- count me in section -->
                             </div>
                             <!--  -->
-                            <div class="carousel-item">
+                            <div class="carousel-item crsel6">
                                 <div class="step-5 first-row row">
                                     <div class="first-row-head col-md-12">
                                         <div class="row first-box-row-head">
@@ -1127,7 +1127,7 @@
                                 <!-- count me in section -->
                             </div>
                             <!--  -->
-                            <div class="carousel-item">
+                            <div class="carousel-item crsel7">
                                 <div class="step-5 first-row row">
                                     <div class="first-row-head col-md-12">
                                         <div class="row first-box-row-head">
@@ -1289,7 +1289,7 @@
         <!-- step 5 -->
 
         <!-- step 6 starts -->
-        <div class="step-6-main main-class collapse" id="stepSix" aria-labelledby="headingSix" data-parent="#main_content">
+        <div class="step-6-main main-class cdata_3 collapse" id="stepSix" aria-labelledby="headingSix" data-parent="#main_content">
             <div class="container">
                 <div class="step-6-inner row">
                     <div class="step-6-inner-left col-md-6">
